[package]
name = "adelie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
git2 = "0.18.3"
lenient_semver = "0.4.2"
reqwest = "0.12.4"
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.199", features = ["serde_derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
toml_edit = { version = "0.22.12", features = ["serde"] }
url = { version = "2.5.0", features = ["serde"] }
